2015-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (heap_info::fill_if_match): Return NULL, not 0.
	(thread_info::fill_if_match): Ditto.
	(thread_info::fill_if_match): New method to extract TEB info from
	PEB/TEB region since W10 1511.
	(format_process_maps): Drop outdated FIXME comment.  Add code to handle
	PEB/TEB region since W10 1511.
	* mmap.cc (posix_madvise): Align comment to new W10 1511 version.
	* wincap.h (wincaps::has_new_pebteb_region): New element.
	* wincap.cc: Implement above element throughout.
	(wincap_10_1511): New global wincaps to support Windows 10 since 1511.
	(wincapc::init): Use wincap_10_1511 for W10 builds >= 10586.

2015-12-03  Corinna Vinschen  <corinna@vinschen.de>

	x86_64 only:
	* dcrt0.cc (_dll_crt0): Always move stack to pthread stack area.
	Explain why.
	* miscfuncs.cc (create_new_main_thread_stack): New function to create
	OS-like stack for main thread in pthread stack area.
	* miscfuncs.cc (create_new_main_thread_stack): Declare.

2015-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (child_info_fork::alloc_stack): Fix formatting.
	* fork.cc (frok::parent): Fix formatting.
	(child_copy): Change type of res to BOOL.

2015-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* crt0.cc (dll_crt0_1): Always restore the TEB stack info.  Especially
	restore DeallocationStack.  Fix comment.

2015-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (child_info_fork::alloc_stack): Don't set stackaddr to 0.

2015-12-03  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (struct child_info): Add member from_main.
	* fork.cc (frok::child): Check from_main rather than stackaddr.
	(frok::parent): Set ch.from_main if running in the main thread.

2015-12-02  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Align to below change.
	(class child_info_fork): Rename stacktop to stacklimit.  Rename
	stackbottom to stackbase.  Accommodate name change throughout Cygwin.